# serializer version: 1
# name: test_snapshot_dify_full
  '''
  DIFY_DB_PASSWORD=dify-db
  DIFY_REDIS_PASSWORD=dify-redis
  DIFY_SECRET_KEY=dify-secret
  DIFY_ADMIN_PASSWORD=dify-admin
  DIFY_WEAVIATE_API_KEY=dify-weaviate
  DIFY_SANDBOX_API_KEY=dify-sandbox
  DIFY_PLUGIN_DAEMON_KEY=dify-daemon
  DIFY_PLUGIN_INNER_API_KEY=dify-inner
  
  '''
# ---
# name: test_snapshot_garage_toml
  '''
  # Auto-generated by nexus_deploy.service_env.
  metadata_dir = "/var/lib/garage/meta"
  data_dir = "/var/lib/garage/data"
  db_engine = "lmdb"
  replication_factor = 1
  
  rpc_bind_addr = "[::]:3901"
  rpc_secret = "garage-rpc"
  
  [s3_api]
  s3_region = "garage"
  api_bind_addr = "[::]:3900"
  root_domain = ".s3.garage.localhost"
  
  [s3_web]
  bind_addr = "[::]:3902"
  root_domain = ".web.garage.localhost"
  
  [admin]
  api_bind_addr = "[::]:3903"
  admin_token = "garage-token"
  
  '''
# ---
# name: test_snapshot_hoppscotch_full
  '''
  DATABASE_URL=postgres://nexus-hoppscotch:hoppscotch-db@hoppscotch-db:5432/hoppscotch
  POSTGRES_PASSWORD=hoppscotch-db
  JWT_SECRET=hoppscotch-jwt
  SESSION_SECRET=hoppscotch-session
  DATA_ENCRYPTION_KEY=hoppscotch-enc
  REDIRECT_URL=https://hoppscotch.example.com
  WHITELISTED_ORIGINS=https://hoppscotch.example.com
  VITE_BASE_URL=https://hoppscotch.example.com
  VITE_SHORTCODE_BASE_URL=https://hoppscotch.example.com
  VITE_ADMIN_URL=https://hoppscotch.example.com/admin
  VITE_BACKEND_GQL_URL=https://hoppscotch.example.com/backend/graphql
  VITE_BACKEND_WS_URL=wss://hoppscotch.example.com/backend/graphql
  VITE_BACKEND_API_URL=https://hoppscotch.example.com/backend/v1
  VITE_ALLOWED_AUTH_PROVIDERS=EMAIL
  MAILER_USE_CUSTOM_CONFIGS=true
  MAILER_SMTP_ENABLE=false
  TOKEN_SALT_COMPLEXITY=10
  MAGIC_LINK_TOKEN_VALIDITY=3
  REFRESH_TOKEN_VALIDITY=604800000
  ACCESS_TOKEN_VALIDITY=86400000
  ENABLE_SUBPATH_BASED_ACCESS=false
  
  '''
# ---
# name: test_snapshot_kestra
  '''
  KESTRA_ADMIN_USER=admin@example.com
  KESTRA_ADMIN_PASSWORD=kestra-pw
  KESTRA_DB_PASSWORD=kestra-db-pw
  KESTRA_URL=https://kestra.example.com
  
  '''
# ---
# name: test_snapshot_lakefs_local_fallback
  '''
  LAKEFS_DATABASE_TYPE=postgres
  LAKEFS_DATABASE_POSTGRES_CONNECTION_STRING=postgres://nexus-lakefs:lakefs-db@lakefs-db:5432/lakefs?sslmode=disable
  LAKEFS_AUTH_ENCRYPT_SECRET_KEY=lakefs-enc
  LAKEFS_BLOCKSTORE_TYPE=local
  LAKEFS_BLOCKSTORE_LOCAL_PATH=/data
  LAKEFS_GATEWAYS_S3_DOMAIN_NAME=s3.lakefs.example.com
  POSTGRES_PASSWORD=lakefs-db
  
  '''
# ---
# name: test_snapshot_lakefs_s3
  '''
  LAKEFS_DATABASE_TYPE=postgres
  LAKEFS_DATABASE_POSTGRES_CONNECTION_STRING=postgres://nexus-lakefs:lakefs-db@lakefs-db:5432/lakefs?sslmode=disable
  LAKEFS_AUTH_ENCRYPT_SECRET_KEY=lakefs-enc
  LAKEFS_BLOCKSTORE_TYPE=s3
  LAKEFS_BLOCKSTORE_S3_ENDPOINT=https://fsn1.your-objectstorage.com
  LAKEFS_BLOCKSTORE_S3_FORCE_PATH_STYLE=true
  LAKEFS_BLOCKSTORE_S3_DISCOVER_BUCKET_REGION=false
  LAKEFS_BLOCKSTORE_S3_REGION=fsn1
  LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_KEY_ID=hetzner-access
  LAKEFS_BLOCKSTORE_S3_CREDENTIALS_SECRET_ACCESS_KEY=hetzner-secret
  LAKEFS_GATEWAYS_S3_DOMAIN_NAME=s3.lakefs.example.com
  POSTGRES_PASSWORD=lakefs-db
  
  '''
# ---
# name: test_snapshot_pg_ducklake_sql_with_s3
  '''
  -- Auto-generated by nexus_deploy.service_env.
  -- Re-applied via 'docker exec ... psql -f' after every spin-up
  -- to handle credential rotation.
  
  -- Drop existing secret if present (idempotent for credential rotation)
  DO $$ BEGIN
      PERFORM duckdb.drop_secret('ducklake_s3');
  EXCEPTION WHEN OTHERS THEN NULL;
  END $$;
  
  -- Create S3 secret for DuckLake Parquet storage
  SELECT duckdb.create_simple_secret(
      type := 'S3',
      name := 'ducklake_s3',
      key_id := 'hetzner-access',
      secret := 'hetzner-secret',
      region := 'fsn1',
      endpoint := 'fsn1.your-objectstorage.com',
      url_style := 'path',
      scope := 's3://ducklake-bucket/'
  );
  
  -- Set default storage path for new DuckLake tables
  ALTER SYSTEM SET ducklake.default_table_path = 's3://ducklake-bucket/';
  SELECT pg_reload_conf();
  
  '''
# ---
# name: test_snapshot_pg_ducklake_sql_without_s3
  '''
  -- Auto-generated by nexus_deploy.service_env.
  -- No Hetzner Object Storage configured - using local volume fallback
  ALTER SYSTEM SET ducklake.default_table_path = '/var/lib/ducklake/';
  SELECT pg_reload_conf();
  
  '''
# ---
# name: test_snapshot_postgres
  '''
  POSTGRES_PASSWORD=pg-pw
  
  '''
# ---
# name: test_snapshot_seaweedfs_s3_json
  '''
  {
    "identities": [
      {
        "name": "admin",
        "credentials": [
          {
            "accessKey": "nexus-seaweedfs",
            "secretKey": "seaweed-pw"
          }
        ],
        "actions": [
          "Admin",
          "Read",
          "Write",
          "List",
          "Tagging"
        ]
      }
    ]
  }
  
  '''
# ---
